--- a/dev-onprem-setup/postgres/postgresql-pv.yaml
+++ b/dev-onprem-setup/postgres/postgresql-pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: postgres-hostpath-pv
+  name: postgresql-hostpath-pv
 spec:
   capacity:
     storage: 10Gi
@@ -10,13 +10,13 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: manual
   hostPath:
-    path: /home/quilradmin/quilr-data/postgres
+    path: /home/quilradmin/quilr-data/postgresql
     type: DirectoryOrCreate
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-hostpath-pvc
+  name: postgresql-hostpath-pvc
   namespace: quilr
 spec:
   accessModes:
@@ -24,5 +24,5 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  volumeName: postgres-hostpath-pv
+  volumeName: postgresql-hostpath-pv
   storageClassName: manual
