Update and rename postgres-values.yaml to postgresql-values.yaml

--- a/dev-onprem-setup/postgres/postgresql-values.yaml
+++ b/dev-onprem-setup/postgres/postgresql-values.yaml
@@ -20,7 +20,7 @@ primary:
 
   persistence:
     enabled: true
-    existingClaim: postgres-hostpath-pvc
+    existingClaim: postgresql-hostpath-pvc
 
   initdb:
     scriptsConfigMap: "quilr-initdb-scripts"
