--- a/dev-onprem-setup/zookeeper/zookeeper.yaml
+++ b/dev-onprem-setup/zookeeper/zookeeper.yaml
@@ -36,7 +36,7 @@ spec:
     spec:
       containers:
         - name: zookeeper
-          image: bitnamilegacy/zookeeper:3.9.0
+          image: bitnami/zookeeper:3.9.0
           securityContext:
             runAsUser: 0
           ports:
